--- a/assets/sass/styles/_ticket_booking.scss
+++ b/assets/sass/styles/_ticket_booking.scss
@@ -239,6 +239,7 @@
                                         flex-direction: row;
                                         span{
                                             width: 50%;
+                                            text-wrap: wrap;
                                         }
                                         .formControl{
                                             width: 50%;
